# wai_world

./: LICENSE  README.md
wai_ingenuity/: LICENSE
wai_ingenuity/wai_ingenuity_control_center/: CMakeLists.txt  package.xml
wai_ingenuity/wai_ingenuity_control_center/config/: details.yaml
wai_ingenuity/wai_ingenuity_control_center/src/: wai_ingenuity_control_center_node.cpp
wai_ingenuity/wai_ingenuity_gazebo/: CMakeLists.txt  package.xml
wai_ingenuity/wai_ingenuity_gazebo/description/: generic_camera.xacro  ingenuity.xacro  sonar_sensor.xacro
wai_ingenuity/wai_ingenuity_gazebo/launch/: wai_ingenuity_gazebo_spawn.launch
wai_ingenuity/wai_ingenuity_gazebo/resources/: link_ingenuity_body.dae  link_ingenuity_body.mtl  link_ingenuity_body.skp  link_ingenuity_rotor_middle.dae  link_ingenuity_rotor_middle.mtl  link_ingenuity_rotor_middle.skp  link_ingenuity_rotor_top.dae  link_ingenuity_rotor_top.mtl  link_ingenuity_rotor_top.skp  link_ingenuity_solar_panel.dae  link_ingenuity_solar_panel.mtl  link_ingenuity_solar_panel.skp  mhs_notes.txt
wai_marvin/: LICENSE
wai_marvin/wai_marvin_control_center/: CMakeLists.txt  package.xml
wai_marvin/wai_marvin_control_center/config/: custom_rosconsole.conf  details.yaml
wai_marvin/wai_marvin_control_center/include/: PID.h
wai_marvin/wai_marvin_control_center/src/: wai_marvin_control_center_node.cpp
wai_marvin/wai_marvin_gazebo/: CMakeLists.txt  package.xml
wai_marvin/wai_marvin_gazebo/descriptions/: generic_camera.xacro  marvin.xacro  sonar_sensor.xacro
wai_marvin/wai_marvin_gazebo/launch/: wai_marvin_gazebo_spawn.launch
wai_oa/: LICENSE
wai_oa/wai_oa_control_center/: CMakeLists.txt  package.xml
wai_oa/wai_oa_control_center/config/: rosconsole_debug.conf
wai_oa/wai_oa_control_center/include/: wai_kalman_filter.h  wai_lowpass_filter.h  wai_oa.h  wai_oa_audience.h  wai_oa_audience_listener.h  wai_oa_camera_rviz.h  wai_oa_image_processing_strategy.h  wai_oa_image_processor.h  wai_oa_listener.h  wai_oa_marvin.h  wai_oa_presenter.h  wai_oa_projector.h  wai_oa_rep_manager.h  wai_oa_rep_sequencer.h  wai_oa_session_manager.h  wai_oa_sketch.h  wai_oa_state.h  wai_oa_teleprompter.h  wai_oa_triggers.h  wai_reps.h  wai_rviz_markers.h
wai_oa/wai_oa_control_center/src/: wai_kalman_filter.cpp  wai_lowpass_filter.cpp  wai_oa.cpp  wai_oa_audience.cpp  wai_oa_audience_listener.cpp  wai_oa_audience_listener_control_center_node.cpp  wai_oa_camera_rviz.cpp  wai_oa_control_center_node.cpp  wai_oa_image_processing_strategy.cpp  wai_oa_image_processor.cpp  wai_oa_listener.cpp  wai_oa_marvin.cpp  wai_oa_presenter.cpp  wai_oa_projector.cpp  wai_oa_rep_manager.cpp  wai_oa_rep_sequencer.cpp  wai_oa_session_manager.cpp  wai_oa_sketch.cpp  wai_oa_state.cpp  wai_oa_teleprompter.cpp  wai_oa_triggers.cpp  wai_reps.cpp  wai_rviz_markers.cpp
wai_oa/wai_oa_gazebo/: CMakeLists.txt  package.xml
wai_oa/wai_oa_gazebo/launch/: wai_oa_audience_gazebo_spawn.launch  wai_oa_gazebo_spawn.launch  wai_oa_record_virtual_presenter.launch  wai_oa_workspace_audience.launch
wai_oa/wai_oa_tools/rviz_plugin_wai_lights/: CMakeLists.txt  LICENSE  package.xml  plugin_description.xml
wai_oa/wai_oa_tools/rviz_plugin_wai_oa_panel/: CMakeLists.txt  LICENSE  README.md  package.xml  plugin_description.xml
wai_oa/wai_oa_tools/rviz_plugin_wai_particles/: CMakeLists.txt  LICENSE  package.xml  plugin_description.xml
wai_oa/wai_oa_tools/rviz_plugin_wai_texture/: CMakeLists.txt  LICENSE  package.xml  plugin_description.xml
wai_oa/wai_oa_tools/rviz_plugin_wai_virtual_camera/: CMakeLists.txt  LICENSE  package.xml  plugin_description.xml
wai_oa/wai_oa_tools/rviz_plugin_wai_vr_hmd_portable/: CMakeLists.txt  LICENSE  README.md  package.xml  plugin_description.xml
wai_oa/wai_oa_tools/wai_screenshare/: CMakeLists.txt  (+2 more)
wai_world_bringup/: CMakeLists.txt  package.xml
wai_world_bringup/docs/: howto_disable_auto_switch_audio_source.txt  howto_install_asus_xtion_pro_live.txt  howto_install_wai_world_on_ubuntu_20_04_6_lts.txt  wai_world_launcher.desktop
wai_world_bringup/launch/: wai_world_bringup.launch
wai_world_bringup/rviz/: wai_world.rviz
wai_world_bringup/scripts/: maintenance_wai_world.bash  maintenance_wai_world_job_limit.bash  maintenance_wai_world_package.bash  wai_world_rviz_set_frame_rate.bash
wai_world_gazebo/: CMakeLists.txt  package.xml
wai_world_gazebo/descriptions/: world.world
wai_world_gazebo/launch/: wai_world_gazebo_spawn.launch
wai_world_launcher/: CMakeLists.txt  package.xml
wai_world_launcher/include/: wai_world_launcher_helpers.h  win_wai_oa.h  win_wai_world.h
wai_world_launcher/launch/: wai_world_launcher.launch
wai_world_launcher/profiles/default/: wai_world_bringup.launch
wai_world_launcher/resources/: resources.qrc
wai_world_launcher/src/: wai_world_launcher_helpers.cpp  wai_world_launcher_node.cpp  win_wai_oa.cpp  win_wai_oa.ui  win_wai_world.cpp  win_wai_world.ui
wai_world_tools/: LICENSE
wai_world_tools/openni_tracker/: CMakeLists.txt  package.xml
wai_world_tools/picovoice_ros/picovoice_driver/: CMakeLists.txt
wai_world_tools/picovoice_ros/picovoice_driver/resources/contexts/: open_auditorium.rhn
wai_world_tools/picovoice_ros/picovoice_driver/src/: cheetah_node.cpp  cheetah_recognizer.cpp  cheetah_recognizer.h  orca_node.cpp  orca_recognizer.cpp  orca_recognizer.h  picollm_node.cpp  picollm_recognizer.cpp  picollm_recognizer.h  porcupine_recognizer.cpp  recognizer.cpp  recognizer.h  recognizer_node.h  rhino_node.cpp  rhino_recognizer.cpp  ros_util.cpp  ros_util.h
wai_world_tools/rviz/: default.rviz
wai_world_tools/rviz_vive_plugin/: CMakeLists.txt  LICENSE  package.xml  plugin_description.xml
wai_world_tools/rviz_vive_plugin/cmake/: FindOpenVR.cmake
wai_world_tools/rviz_vive_plugin/include/rviz_vive_plugin/: vive_display.h
wai_world_tools/rviz_vive_plugin/rviz/: rviz_vive_test.rviz
wai_world_tools/rviz_vive_plugin/src/: vive.cpp  vive_display.cpp
wai_world_tools/rviz_vive_plugin_msgs/: CMakeLists.txt  package.xml
wai_world_tools/rviz_vive_plugin_msgs/msg/: Controller.msg  ControllerVibration.msg
(+209 files in other folders)
