<?xml version="1.0"?>
<package>
  <name>wai_world_launcher</name>
  <version>1.0.0</version>
  <description>WAI World - WAI World Launcher</description>
  <license>BSD</license>
  <maintainer email="isop.alexander@gmail.com">W. A. Isop</maintainer>
  <url type="repository">https://github.com/weraleiso/wai_world</url>
  <author email="isop.alexander@gmail.com">W. A. Isop</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  
  <run_depend>roscpp</run_depend>

</package>
